--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             
             <div id="practice-content" class="dar-content">
                 Постарайтесь отследить причинно-следственную связь от событий, которые у вас сейчас есть. Почему именно так? Воспользуйтесь практикой "5 почему"<br>
-                <a href="https://github.com/miplix/glavnaya_dar" class="practice-link">медитация</a>
+                <a href="https://miplix.github.io/glavnaya_dar/" class="practice-link">медитация</a>
                 <a class="hide-link" onclick="hideContent('practice')">скрыть</a>
             </div>
     
